<resources>
    <string name="app_name">SEMINARIO 2020</string>
    <string name="not_log_in">Error al iniciar sesión</string>
    <string name="siguiente">Siguiente</string>
    <string name="menu_navegacion">Menu de Navegación</string>
    <string name="restaurantes">Registrar Restaurantes</string>
    <string name="menu">Registrar Menu</string>
    <string name="clientes">Registrar Clientes</string>
    <string name="pedidos">Hacer Pedidos</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="addcliente">Añadir Cliente</string>
    <string name="addrestaurant">Añadir Restaurante</string>
    <string name="addmenu">Añadir Menu</string>
    <string name="addpedido">Añadir Pedido</string>
    <string name="action_settings">Settings</string>
    <string name="name_menu">Nombre</string>
    <string name="price_menu">Precio</string>
    <string name="insertar">Insertar</string>
    <string name="photo">Tomar Foto</string>


    <string name="title_activity_maps">Map</string>

    <string name="description">Descripción</string>
    <string name="hacer_pedido">HACER PEDIDO</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="revoke">Revoke</string>
    <string name="todo">TODO</string>
    <string name="register">register</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="c_i">C.I.</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="crear_menu">CREAR MENU</string>


    <string name="menu_principal">MENU PRINCIPAL</string>
    <string name="a_adir_cliente">AÑADIR CLIENTE</string>

</resources>
